--- a/src/packs/psi-biopsionics/Invincible Stand.yml
+++ b/src/packs/psi-biopsionics/Invincible Stand.yml
@@ -12,5 +12,6 @@ data:
     target, regardless of this technique.</p>
   level: 2
   source: biopsionics
+  effort: scene
 name: Invincible Stand
 type: power
