--- a/src/packs/psi-biopsionics/Organic Purification Protocols.yml
+++ b/src/packs/psi-biopsionics/Organic Purification Protocols.yml
@@ -10,5 +10,7 @@ data:
     illnesses.</p>
   level: 1
   source: biopsionics
+  skill: wis/biopsionics
+  effort: day
 name: Organic Purification Protocols
 type: power
