--- a/src/packs/psi-biopsionics/Accelerated Succor.yml
+++ b/src/packs/psi-biopsionics/Accelerated Succor.yml
@@ -11,3 +11,4 @@ data:
   effort: day
 name: Accelerated Succor
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
