--- a/src/packs/psi-biopsionics/Holistic Optimization Patterning.yml
+++ b/src/packs/psi-biopsionics/Holistic Optimization Patterning.yml
@@ -16,3 +16,4 @@ data:
   effort: day
 name: Holistic Optimization Patterning
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
