--- a/src/packs/psi-metapsionics/Surge Momentum.yml
+++ b/src/packs/psi-metapsionics/Surge Momentum.yml
@@ -12,5 +12,6 @@ data:
     up, they automatically fail their saving throw.</p>
   level: 3
   source: metapsionics
+  effort: day
 name: Surge Momentum
 type: power
