--- a/src/packs/psi-precognition/Forced Outcome.yml
+++ b/src/packs/psi-precognition/Forced Outcome.yml
@@ -13,5 +13,6 @@ data:
     chance per scene is likely impossible to produce.</p>
   level: 3
   source: precognition
+  effort: scene
 name: Forced Outcome
 type: power
