--- a/src/packs/psi-precognition/Not My Time.yml
+++ b/src/packs/psi-precognition/Not My Time.yml
@@ -12,5 +12,6 @@ data:
     technique can trigger no more often than once per week.</p>
   level: 4
   source: precognition
+  effort: day
 name: Not My Time
 type: power
