--- a/src/packs/psi-telepathy/Memory Editing.yml
+++ b/src/packs/psi-telepathy/Memory Editing.yml
@@ -14,5 +14,7 @@ data:
     given a reason to recollect them.</p>
   level: 4
   source: telepathy
+  save: metal
+  effort: day
 name: Memory Editing
 type: power
