--- a/src/packs/psi-teleportation/Personal Apportation.yml
+++ b/src/packs/psi-teleportation/Personal Apportation.yml
@@ -27,5 +27,6 @@ data:
     surface or near orbit.</p>
   level: 0
   source: teleportation
+  effort: scene
 name: Personal Apportation
 type: power
