--- a/src/packs/psi-biopsionics/Invincible Stand.yml
+++ b/src/packs/psi-biopsionics/Invincible Stand.yml
@@ -15,3 +15,4 @@ data:
   effort: scene
 name: Invincible Stand
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
