--- a/src/packs/psi-biopsionics/Major Organ Restoration.yml
+++ b/src/packs/psi-biopsionics/Major Organ Restoration.yml
@@ -12,3 +12,4 @@ data:
   source: biopsionics
 name: Major Organ Restoration
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
