--- a/src/packs/psi-biopsionics/Mastered Succor.yml
+++ b/src/packs/psi-biopsionics/Mastered Succor.yml
@@ -9,3 +9,4 @@ data:
   source: biopsionics
 name: Mastered Succor
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
