--- a/src/packs/psi-biopsionics/Metamorph.yml
+++ b/src/packs/psi-biopsionics/Metamorph.yml
@@ -19,3 +19,4 @@ data:
   effort: current
 name: Metamorph
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
