--- a/src/packs/psi-biopsionics/Organic Purification Protocols.yml
+++ b/src/packs/psi-biopsionics/Organic Purification Protocols.yml
@@ -14,3 +14,4 @@ data:
   effort: day
 name: Organic Purification Protocols
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
