--- a/src/packs/psi-biopsionics/Psychic Succor.yml
+++ b/src/packs/psi-biopsionics/Psychic Succor.yml
@@ -25,3 +25,4 @@ data:
   effort: day
 name: Psychic Succor
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
