--- a/src/packs/psi-biopsionics/Teratic Overload.yml
+++ b/src/packs/psi-biopsionics/Teratic Overload.yml
@@ -21,3 +21,4 @@ data:
   source: biopsionics
 name: Teratic Overload
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
