--- a/src/packs/psi-biopsionics/Tissue Integrity Field.yml
+++ b/src/packs/psi-biopsionics/Tissue Integrity Field.yml
@@ -11,3 +11,4 @@ data:
   effort: day
 name: Tissue Integrity Field
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
