--- a/src/packs/psi-metapsionics/Cloak Powers.yml
+++ b/src/packs/psi-metapsionics/Cloak Powers.yml
@@ -15,3 +15,4 @@ data:
   skill: wis/metapsionics
 name: Cloak Powers
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
