--- a/src/packs/psi-metapsionics/Concert of Minds.yml
+++ b/src/packs/psi-metapsionics/Concert of Minds.yml
@@ -18,3 +18,4 @@ data:
   effort: current
 name: Concert of Minds
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
