--- a/src/packs/psi-metapsionics/Flawless Mastery.yml
+++ b/src/packs/psi-metapsionics/Flawless Mastery.yml
@@ -14,3 +14,4 @@ data:
   source: metapsionics
 name: Flawless Mastery
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
