--- a/src/packs/psi-metapsionics/Metadimensional Friction.yml
+++ b/src/packs/psi-metapsionics/Metadimensional Friction.yml
@@ -15,3 +15,4 @@ data:
   save: mental
 name: Metadimensional Friction
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
