--- a/src/packs/psi-metapsionics/Psychic Tutelage.yml
+++ b/src/packs/psi-metapsionics/Psychic Tutelage.yml
@@ -18,3 +18,4 @@ data:
   source: metapsionics
 name: Psychic Tutelage
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
