--- a/src/packs/psi-precognition/Cursed Luck.yml
+++ b/src/packs/psi-precognition/Cursed Luck.yml
@@ -16,3 +16,4 @@ data:
   save: metal
 name: Cursed Luck
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
