--- a/src/packs/psi-precognition/Sense the Need.yml
+++ b/src/packs/psi-precognition/Sense the Need.yml
@@ -15,3 +15,4 @@ data:
   effort: day
 name: Sense the Need
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
