--- a/src/packs/psi-precognition/Terminal Reflection.yml
+++ b/src/packs/psi-precognition/Terminal Reflection.yml
@@ -13,3 +13,4 @@ data:
   effort: day
 name: Terminal Reflection
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
