--- a/src/packs/psi-telekinesis/Impact Sump.yml
+++ b/src/packs/psi-telekinesis/Impact Sump.yml
@@ -10,3 +10,4 @@ data:
   effort: day
 name: Impact Sump
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
