--- a/src/packs/psi-telekinesis/Kinetic Transversal.yml
+++ b/src/packs/psi-telekinesis/Kinetic Transversal.yml
@@ -11,3 +11,4 @@ data:
   effort: current
 name: Kinetic Transversal
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
