--- a/src/packs/psi-telekinesis/Telekinetic Expertise.yml
+++ b/src/packs/psi-telekinesis/Telekinetic Expertise.yml
@@ -8,3 +8,4 @@ data:
   source: telekInesIs
 name: Telekinetic Expertise
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
