--- a/src/packs/psi-telekinesis/Telekinetic Manipulation.yml
+++ b/src/packs/psi-telekinesis/Telekinetic Manipulation.yml
@@ -28,3 +28,4 @@ data:
   effort: scene
 name: Telekinetic Manipulation
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
