--- a/src/packs/psi-telekinesis/Telekinetic Ram.yml
+++ b/src/packs/psi-telekinesis/Telekinetic Ram.yml
@@ -18,3 +18,4 @@ data:
   roll: 5d12
 name: Telekinetic Ram
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
