--- a/src/packs/psi-telepathy/Memory Editing.yml
+++ b/src/packs/psi-telepathy/Memory Editing.yml
@@ -18,3 +18,4 @@ data:
   effort: day
 name: Memory Editing
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
