--- a/src/packs/psi-telepathy/Telepathic Assault.yml
+++ b/src/packs/psi-telepathy/Telepathic Assault.yml
@@ -16,3 +16,4 @@ data:
   roll: 6d6
 name: Telepathic Assault
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
