--- a/src/packs/psi-telepathy/Unity of Thought.yml
+++ b/src/packs/psi-telepathy/Unity of Thought.yml
@@ -20,3 +20,4 @@ data:
   source: telepathy
 name: Unity of Thought
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
