--- a/src/packs/psi-teleportation/Burdened Apportation.yml
+++ b/src/packs/psi-teleportation/Burdened Apportation.yml
@@ -16,3 +16,4 @@ data:
   effort: day
 name: Burdened Apportation
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
