--- a/src/packs/psi-teleportation/Offensive Apportation.yml
+++ b/src/packs/psi-teleportation/Offensive Apportation.yml
@@ -22,3 +22,4 @@ data:
   effort: day
 name: Offensive Apportation
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
