--- a/src/packs/psi-teleportation/Perceptive Dislocation.yml
+++ b/src/packs/psi-teleportation/Perceptive Dislocation.yml
@@ -9,3 +9,4 @@ data:
   effort: day
 name: Perceptive Dislocation
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
