--- a/src/packs/psi-teleportation/Spatial Awareness.yml
+++ b/src/packs/psi-teleportation/Spatial Awareness.yml
@@ -12,3 +12,4 @@ data:
   effort: current
 name: Spatial Awareness
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
