--- a/src/packs/psi-teleportation/Stutterjump.yml
+++ b/src/packs/psi-teleportation/Stutterjump.yml
@@ -17,3 +17,4 @@ data:
   effort: current
 name: Stutterjump
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
