--- a/src/packs/psi-biopsionics/Quintessential Reconstruction.yml
+++ b/src/packs/psi-biopsionics/Quintessential Reconstruction.yml
@@ -15,3 +15,4 @@ data:
   source: biopsionics
 name: Quintessential Reconstruction
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
