--- a/src/packs/psi-biopsionics/Remote Repair.yml
+++ b/src/packs/psi-biopsionics/Remote Repair.yml
@@ -12,3 +12,4 @@ data:
   effort: scene
 name: Remote Repair
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
