--- a/src/packs/psi-metapsionics/Impervious Pavis of Will.yml
+++ b/src/packs/psi-metapsionics/Impervious Pavis of Will.yml
@@ -14,3 +14,4 @@ data:
   effort: day
 name: Impervious Pavis of Will
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
