--- a/src/packs/psi-metapsionics/Mindtracing.yml
+++ b/src/packs/psi-metapsionics/Mindtracing.yml
@@ -17,3 +17,4 @@ data:
   effort: scene
 name: Mindtracing
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
