--- a/src/packs/psi-metapsionics/Neural Trap.yml
+++ b/src/packs/psi-metapsionics/Neural Trap.yml
@@ -14,3 +14,4 @@ data:
   effort: current
 name: Neural Trap
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
