--- a/src/packs/psi-metapsionics/Psychic Refinement.yml
+++ b/src/packs/psi-metapsionics/Psychic Refinement.yml
@@ -23,3 +23,4 @@ data:
   source: metapsionics
 name: Psychic Refinement
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
