--- a/src/packs/psi-metapsionics/Psychic Static.yml
+++ b/src/packs/psi-metapsionics/Psychic Static.yml
@@ -16,3 +16,4 @@ data:
   effort: day
 name: Psychic Static
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
