--- a/src/packs/psi-metapsionics/Suspended Manifestation.yml
+++ b/src/packs/psi-metapsionics/Suspended Manifestation.yml
@@ -15,3 +15,4 @@ data:
   effort: day
 name: Suspended Manifestation
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
