--- a/src/packs/psi-metapsionics/Synthetic Adaptation.yml
+++ b/src/packs/psi-metapsionics/Synthetic Adaptation.yml
@@ -13,3 +13,4 @@ data:
   source: metapsionics
 name: Synthetic Adaptation
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
