--- a/src/packs/psi-precognition/Alternate Outcome.yml
+++ b/src/packs/psi-precognition/Alternate Outcome.yml
@@ -12,3 +12,4 @@ data:
   effort: day
 name: Alternate Outcome
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
