--- a/src/packs/psi-precognition/Anguished Vision.yml
+++ b/src/packs/psi-precognition/Anguished Vision.yml
@@ -14,3 +14,4 @@ data:
   effort: day
 name: Anguished Vision
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
