--- a/src/packs/psi-precognition/Destiny’s Shield.yml
+++ b/src/packs/psi-precognition/Destiny’s Shield.yml
@@ -14,3 +14,4 @@ data:
   effort: day
 name: Destiny’s Shield
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
