--- a/src/packs/psi-precognition/Forced Outcome.yml
+++ b/src/packs/psi-precognition/Forced Outcome.yml
@@ -16,3 +16,4 @@ data:
   effort: scene
 name: Forced Outcome
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
