--- a/src/packs/psi-precognition/Intuitive Response.yml
+++ b/src/packs/psi-precognition/Intuitive Response.yml
@@ -13,3 +13,4 @@ data:
   effort: scene
 name: Intuitive Response
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
