--- a/src/packs/psi-precognition/Prophecy.yml
+++ b/src/packs/psi-precognition/Prophecy.yml
@@ -16,3 +16,4 @@ data:
   effort: current
 name: Prophecy
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
