--- a/src/packs/psi-telekinesis/Pressure Field.yml
+++ b/src/packs/psi-telekinesis/Pressure Field.yml
@@ -13,3 +13,4 @@ data:
   effort: current
 name: Pressure Field
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
