--- a/src/packs/psi-telekinesis/Reactive Telekinesis.yml
+++ b/src/packs/psi-telekinesis/Reactive Telekinesis.yml
@@ -12,3 +12,4 @@ data:
   effort: scene
 name: Reactive Telekinesis
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
