--- a/src/packs/psi-telekinesis/Telekinetic Armory.yml
+++ b/src/packs/psi-telekinesis/Telekinetic Armory.yml
@@ -16,3 +16,4 @@ data:
   effort: current
 name: Telekinetic Armory
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
