--- a/src/packs/psi-telekinesis/Thermokinesis.yml
+++ b/src/packs/psi-telekinesis/Thermokinesis.yml
@@ -18,3 +18,4 @@ data:
   roll: 2d12
 name: Thermokinesis
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
