--- a/src/packs/psi-telepathy/Facile Mind.yml
+++ b/src/packs/psi-telepathy/Facile Mind.yml
@@ -13,3 +13,4 @@ data:
   effort: scene
 name: Facile Mind
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
