--- a/src/packs/psi-telepathy/Far Thought.yml
+++ b/src/packs/psi-telepathy/Far Thought.yml
@@ -12,3 +12,4 @@ data:
   source: telepathy
 name: Far Thought
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
