--- a/src/packs/psi-telepathy/Reflex Response.yml
+++ b/src/packs/psi-telepathy/Reflex Response.yml
@@ -15,3 +15,4 @@ data:
   effort: day
 name: Reflex Response
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
