--- a/src/packs/psi-telepathy/Suppress Cognition.yml
+++ b/src/packs/psi-telepathy/Suppress Cognition.yml
@@ -20,3 +20,4 @@ data:
   effort: scene
 name: Suppress Cognition
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
