--- a/src/packs/psi-telepathy/Telepathic Contact.yml
+++ b/src/packs/psi-telepathy/Telepathic Contact.yml
@@ -37,3 +37,4 @@ data:
   effort: day
 name: Telepathic Contact
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
