--- a/src/packs/psi-telepathy/Transmit Thought.yml
+++ b/src/packs/psi-telepathy/Transmit Thought.yml
@@ -8,3 +8,4 @@ data:
   source: telepathy
 name: Transmit Thought
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
