--- a/src/packs/psi-teleportation/Deep Intrusion.yml
+++ b/src/packs/psi-teleportation/Deep Intrusion.yml
@@ -14,3 +14,4 @@ data:
   effort: day
 name: Deep Intrusion
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
