--- a/src/packs/psi-teleportation/Effortless Apportation.yml
+++ b/src/packs/psi-teleportation/Effortless Apportation.yml
@@ -9,3 +9,4 @@ data:
   source: teleportation
 name: Effortless Apportation
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
