--- a/src/packs/psi-teleportation/Personal Apportation.yml
+++ b/src/packs/psi-teleportation/Personal Apportation.yml
@@ -30,3 +30,4 @@ data:
   effort: scene
 name: Personal Apportation
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
