--- a/src/packs/psi-teleportation/Rift Reduplication.yml
+++ b/src/packs/psi-teleportation/Rift Reduplication.yml
@@ -20,3 +20,4 @@ data:
   effort: day
 name: Rift Reduplication
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
