--- a/src/packs/psi-teleportation/Spatial Synchrony Mandala.yml
+++ b/src/packs/psi-teleportation/Spatial Synchrony Mandala.yml
@@ -14,3 +14,4 @@ data:
   source: teleportation
 name: Spatial Synchrony Mandala
 type: power
+img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
