--- a/src/packs/psi-precognition/Cursed Luck.yml
+++ b/src/packs/psi-precognition/Cursed Luck.yml
@@ -13,7 +13,7 @@ data:
   level: 3
   source: precognition
   effort: day
-  save: metal
+  save: mental
 name: Cursed Luck
 type: power
 img: systems/swnr/assets/icons/game-icons.net/item-icons/psychic-waves-white.svg
