--- a/src/packs/psi-telepathy/Reflex Response.yml
+++ b/src/packs/psi-telepathy/Reflex Response.yml
@@ -11,7 +11,7 @@ data:
     rationalize it as their choice.</p>
   level: 3
   source: telepathy
-  save: metal
+  save: mental
   effort: day
 name: Reflex Response
 type: power
