--- a/src/packs/psi-telepathy/Suppress Cognition.yml
+++ b/src/packs/psi-telepathy/Suppress Cognition.yml
@@ -16,7 +16,7 @@ data:
     attention somehow.</p>
   level: 2
   source: telepathy
-  save: metal
+  save: mental
   effort: scene
 name: Suppress Cognition
 type: power
