--- a/src/packs/psi-telepathy/Telepathic Assault.yml
+++ b/src/packs/psi-telepathy/Telepathic Assault.yml
@@ -11,7 +11,7 @@ data:
     per scene.</p>
   level: 3
   source: telepathy
-  save: metal
+  save: mental
   effort: day
   roll: 6d6
 name: Telepathic Assault
