--- a/src/packs/psi-teleportation/Offensive Apportation.yml
+++ b/src/packs/psi-teleportation/Offensive Apportation.yml
@@ -18,7 +18,7 @@ data:
     hits or not.</p>
   level: 4
   source: teleportation
-  save: metal
+  save: mental
   effort: day
 name: Offensive Apportation
 type: power
