--- a/src/packs/psi-telekinesis/Force Puppetry.yml
+++ b/src/packs/psi-telekinesis/Force Puppetry.yml
@@ -18,7 +18,7 @@ data:
     silent.</p>
   level: 4
   source: telekInesIs
-  save: metal
+  save: mental
   effort: day
 name: Force Puppetry
 type: power
