public note for NPC

--- a/src/template.yml
+++ b/src/template.yml
@@ -146,6 +146,9 @@ Actor:
       right:
         label: Bio/Notes
         contents: ""
+      public:
+        label: Public Notes
+        contents: ""
   faction:
     description: ""
     health:
