--- a/src/system.yml
+++ b/src/system.yml
@@ -3,7 +3,7 @@ title: "Stars Without Number: Revised and Cities Without Number"
 description: >-
   A system for playing Stars Without Number: Revised and Cities Without Number.
   CWN is in alpha state.
-version: 1.0.2
+version: 1.0.3
 authors: [
   {
     "name": "wintersleepAI"
@@ -207,24 +207,28 @@ packs:
     name: one-roll-tables
     path: packs/one-roll-tables.db
     system: swnr
+    type: RollTable
   - entity: RollTable
     label: One Roll Tables - backing
     module: swnr
     name: one-roll-backing
     path: packs/one-roll-backing.db
-    system: swnr    
+    type: RollTable
+    system: swnr
 languages:
   - lang: en
     name: English
     path: lang/en.json
 gridDistance: 2
 gridUnits: "m"
-minimumCoreVersion: 0.8.6
-compatibleCoreVersion: 10.291
+compatibility: 
+  - minimum: 8.6
+    verified: 10
+    maximum: 11
 url: "https://github.com/wintersleepAI/foundry-swnr"
 manifest: >-
   https://github.com/wintersleepAI/foundry-swnr/releases/latest/download/system.json
-download: "https://github.com/wintersleepAI/foundry-swnr/releases/download/v1.0.1/v1.0.1.zip"
+download: "https://github.com/wintersleepAI/foundry-swnr/releases/download/v1.0.3/v1.0.3.zip"
 license: "https://github.com/wintersleepAI/foundry-swnr/blob/master/LICENSE.txt"
 readme: ""
 bugs: "https://github.com/wintersleepAI/foundry-swnr/issues"
