--- a/src/system.yml
+++ b/src/system.yml
@@ -215,6 +215,13 @@ packs:
     path: packs/one-roll-backing.db
     type: RollTable
     system: swnr
+  - name: cwncyberware
+    label: CWN Cyberware
+    system: swnr
+    module: swnr
+    path: packs/cwn-cyberware.db
+    type: Item
+    entity: Item
 languages:
   - lang: en
     name: English
