Draft on linking chars to decks for showing access and Hp

--- a/src/template.yml
+++ b/src/template.yml
@@ -51,6 +51,7 @@ Actor:
       access:
         value: 0
         bonus: 0
+      cyberdecks: []
     encumbrance:
       encumbrance:
         stowed:
