--- a/src/system.yml
+++ b/src/system.yml
@@ -222,6 +222,13 @@ packs:
     path: packs/cwn-cyberware.db
     type: Item
     entity: Item
+  - name: programs
+    label: CWN Programs
+    system: swnr
+    module: swnr
+    path: packs/cwn-program.db
+    type: Item
+    entity: Item
 languages:
   - lang: en
     name: English
