--- a/src/packs/cwn-armor/Riot Shield.yml
+++ b/src/packs/cwn-armor/Riot Shield.yml
@@ -3,9 +3,9 @@ data:
   cost: 1000
   description: >-
     These bulky, transparent shields are most effective in fending off melee attackers.
-    They must be Readied in one hand; users with multi- ple cyberarms can benefit
-    from only one shield at a time. A shield negates the first melee Shock damage
-    a bearer takes in a round.
+    They must be Readied in one hand; users with multiple cyberarms can benefit from
+    only one shield at a time. A shield negates the first melee Shock damage a bearer
+    takes in a round.
   encumbrance: 2
   isHeavy: true
   isSubtle: true
@@ -17,5 +17,5 @@ data:
     value: 0
   traumaDiePenalty: 0
 img: systems/swnr/assets/icons/game-icons.net/item-icons/armor-white.svg
-name: RiotShield
+name: Riot Shield
 type: armor
