--- a/src/system.yml
+++ b/src/system.yml
@@ -250,6 +250,20 @@ packs:
     path: packs/cwn-vehicle-weapons.db
     type: Item
     entity: Item
+  - name: cwndrones
+    label: CWN Drones
+    system: swnr
+    module: swnr
+    path: packs/cwn-drones.db
+    type: Actor
+    entity: Actor
+  - name: cwndronefittings
+    label: CWN Drone Fittings
+    system: swnr
+    module: swnr
+    path: packs/cwn-drone-fittings.db
+    type: Item
+    entity: Item
 languages:
   - lang: en
     name: English
