--- a/src/system.yml
+++ b/src/system.yml
@@ -264,6 +264,13 @@ packs:
     path: packs/cwn-drone-fittings.db
     type: Item
     entity: Item
+  - name: cwnitems
+    label: CWN Items
+    system: swnr
+    module: swnr
+    path: packs/cwn-items.db
+    type: Item
+    entity: Item
 languages:
   - lang: en
     name: English
