--- a/src/packs/cwn-items/Active Hearing Protection.yml
+++ b/src/packs/cwn-items/Active Hearing Protection.yml
@@ -5,6 +5,6 @@ data:
     along conversational-level speech without difficulty.
   encumbrance: 1
   noEncReadied: true
-img: systems/swnr/assets/icons/game-icons.net/item-icons/item.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Active Hearing Protection
 type: item
