--- a/src/packs/cwn-items/Binoculars.yml
+++ b/src/packs/cwn-items/Binoculars.yml
@@ -5,6 +5,6 @@ data:
     bring targets as much as a kilometer distant into view.
   encumbrance: 1
   noEncReadied: true
-img: systems/swnr/assets/icons/game-icons.net/item-icons/item.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Binoculars
 type: item
