--- a/src/packs/cwn-items/Ammunition (Round).yml
+++ b/src/packs/cwn-items/Ammunition (Round).yml
@@ -5,6 +5,6 @@ data:
     firearms.
   encumbrance: 0
   noEncReadied: true
-img: systems/swnr/assets/icons/game-icons.net/item-icons/item.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Ammunition (Round)
 type: item
