--- a/src/packs/cwn-items/Ammunition Magazine.yml
+++ b/src/packs/cwn-items/Ammunition Magazine.yml
@@ -5,6 +5,6 @@ data:
     firearms.
   encumbrance: 1
   noEncReadied: true
-img: systems/swnr/assets/icons/game-icons.net/item-icons/item.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Ammunition Magazine
 type: item
