--- a/src/packs/cwn-items/Kit,Basic Tools.yml
+++ b/src/packs/cwn-items/Kit,Basic Tools.yml
@@ -9,6 +9,6 @@ data:
     other such gear for extended wilderness stays.
   encumbrance: 2
   noEncReadied: true
-img: systems/swnr/assets/icons/game-icons.net/item-icons/item.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Kit,Basic Tools
 type: item
