--- a/src/packs/cwn-items/Lockpicks.yml
+++ b/src/packs/cwn-items/Lockpicks.yml
@@ -5,6 +5,6 @@ data:
     threaten most modern locks.
   encumbrance: 1
   noEncReadied: true
-img: systems/swnr/assets/icons/game-icons.net/item-icons/item.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Lockpicks
 type: item
