--- a/src/packs/cwn-items/Portable video camera.yml
+++ b/src/packs/cwn-items/Portable video camera.yml
@@ -5,6 +5,6 @@ data:
     video before its internal memory is filled.
   encumbrance: 1
   noEncReadied: true
-img: systems/swnr/assets/icons/game-icons.net/item-icons/item.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Portable video camera
 type: item
