--- a/src/packs/cwn-items/VR crown,cheap.yml
+++ b/src/packs/cwn-items/VR crown,cheap.yml
@@ -4,6 +4,6 @@ data:
     A cheap headset for a VR addict or a hacker too poor for a cranial jack.
   encumbrance: 1
   noEncReadied: true
-img: systems/swnr/assets/icons/game-icons.net/item-icons/item.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: VR crown,cheap
 type: item
